[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/images/menu_background.jpg" type="Texture" id=1]
[ext_resource path="res://resources/themes/gui_theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/Options.gd" type="Script" id=3]

[node name="Options" type="Node2D"]
script = ExtResource( 3 )

[node name="background" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.317647 )
self_modulate = Color( 0.27451, 0.258824, 0.258824, 1 )
margin_left = 2.0
margin_top = -1.0
margin_right = 1282.0
margin_bottom = 719.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 198.0
margin_top = 30.0
margin_right = 1089.0
margin_bottom = 692.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 891.0
margin_bottom = 662.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 279.0
margin_right = 891.0
margin_bottom = 311.0
alignment = 1

[node name="masterAudio" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 49.0
margin_top = 4.0
margin_right = 361.0
margin_bottom = 28.0
rect_min_size = Vector2( 312, 0 )
text = "Master Audio"

[node name="masterSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 365.0
margin_right = 765.0
margin_bottom = 32.0
rect_min_size = Vector2( 400, 0 )
min_value = -49.0
max_value = 1.0
value = 1.0

[node name="value" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 769.0
margin_top = 4.0
margin_right = 841.0
margin_bottom = 28.0
text = "100"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 315.0
margin_right = 891.0
margin_bottom = 347.0
alignment = 1

[node name="SFX" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 49.0
margin_top = 4.0
margin_right = 361.0
margin_bottom = 28.0
text = "Sound Effects"

[node name="sfxSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 365.0
margin_right = 765.0
margin_bottom = 32.0
rect_min_size = Vector2( 400, 0 )
theme = ExtResource( 2 )
min_value = -49.0
max_value = 1.0
value = 1.0

[node name="value" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 769.0
margin_top = 4.0
margin_right = 841.0
margin_bottom = 28.0
text = "100"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 351.0
margin_right = 891.0
margin_bottom = 383.0
alignment = 1

[node name="soundtrack" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 49.0
margin_top = 4.0
margin_right = 361.0
margin_bottom = 28.0
rect_min_size = Vector2( 312, 0 )
text = "Soundtrack"

[node name="soundtrackSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 365.0
margin_right = 765.0
margin_bottom = 32.0
rect_min_size = Vector2( 400, 0 )
min_value = -49.0
max_value = 1.0
value = 1.0

[node name="value" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 769.0
margin_top = 4.0
margin_right = 841.0
margin_bottom = 28.0
text = "100"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/masterSlider" to="." method="_on_masterSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer2/sfxSlider" to="." method="_on_sfxSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer3/soundtrackSlider" to="." method="_on_soundtrackSlider_value_changed"]
